Moved the machine state types

--- a/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
+++ b/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
@@ -2,17 +2,17 @@
 #><#@ assembly name="System.Core"
 #><#@ assembly name="$(TargetDir)Brainf_ckSharp.dll"
 #><#@ assembly name="NetStandard"
-#><#@ import namespace="System"
 #><#@ import namespace="Brainf_ckSharp.Enums"
 #><#@ output extension=".g.cs" #>
 using System;
 using System.Diagnostics.Contracts;
 using System.Runtime.CompilerServices;
 using Brainf_ckSharp.Enums;
+using Brainf_ckSharp.Memory.Interfaces;
 
 #pragma warning disable IDE0032
 
-namespace Brainf_ckSharp.Models.Internal
+namespace Brainf_ckSharp.Memory
 {
     /// <summary>
     /// A <see langword="class"/> that represents the state of a Turing machine
