--- a/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
+++ b/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
@@ -3,12 +3,13 @@
 using System.Diagnostics.Contracts;
 using System.Runtime.CompilerServices;
 using System.Threading;
+using Brainf_ckSharp.Configurations;
 using Brainf_ckSharp.Enums;
 using Brainf_ckSharp.Memory.Interfaces;
 
 #pragma warning disable CS0282
 
-namespace Brainf_ckSharp.Configurations
+namespace Brainf_ckSharp
 {
 <#
 var names = new[] {"Debug", "Release"};
