Added default values to the configurations

--- a/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
+++ b/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
@@ -58,7 +58,7 @@ foreach (var name in names)
         /// <param name="configuration">The input <see cref="<#=name#>Configuration"/> instance</param>
         /// <param name="initialState">The initial state machine to use to start running the script from</param>
         /// <returns>The input <see cref="<#=name#>Configuration"/> instance</returns>
-        /// <remarks>This property is mutually exclusive with <see cref="<#=name#>Configuration.MemorySize"/> and <see cref="<#=name#>Configuration.OverflowMode"/></remarks>
+        /// <remarks>This property will override the values of <see cref="<#=name#>Configuration.MemorySize"/> and <see cref="<#=name#>Configuration.OverflowMode"/></remarks>
         [Pure]
         [MethodImpl(MethodImplOptions.AggressiveInlining)]
         public static ref readonly <#=name#>Configuration WithInitialState(in this <#=name#>Configuration configuration, IReadOnlyMachineState initialState)
@@ -74,7 +74,6 @@ foreach (var name in names)
         /// <param name="configuration">The input <see cref="<#=name#>Configuration"/> instance</param>
         /// <param name="memorySize">The size of the state machine to create to run the script</param>
         /// <returns>The input <see cref="<#=name#>Configuration"/> instance</returns>
-        /// <remarks>This property is mutually exclusive with <see cref="<#=name#>Configuration.InitialState"/></remarks>
         [Pure]
         [MethodImpl(MethodImplOptions.AggressiveInlining)]
         public static ref readonly <#=name#>Configuration WithMemorySize(in this <#=name#>Configuration configuration, int memorySize)
@@ -90,7 +89,6 @@ foreach (var name in names)
         /// <param name="configuration">The input <see cref="<#=name#>Configuration"/> instance</param>
         /// <param name="overflowMode">The overflow mode to use in the state machine used to run the script</param>
         /// <returns>The input <see cref="<#=name#>Configuration"/> instance</returns>
-        /// <remarks>This property is mutually exclusive with <see cref="<#=name#>Configuration.InitialState"/></remarks>
         [Pure]
         [MethodImpl(MethodImplOptions.AggressiveInlining)]
         public static ref readonly <#=name#>Configuration WithOverflowMode(in this <#=name#>Configuration configuration, OverflowMode overflowMode)
