--- a/profiling/Brainf_ckSharp.Uwp.Profiler/MainPage.xaml
+++ b/profiling/Brainf_ckSharp.Uwp.Profiler/MainPage.xaml
@@ -4,10 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <controls:MarkdownTextBlock
+            x:Name="MarkdownTextBlock"
+            Padding="20"/>
+        <ProgressBar
+            x:Name="ProgressBar"
+            VerticalAlignment="Top"
+            IsIndeterminate="True"/>
     </Grid>
 </Page>
