--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/UnicodeCharactersMap/Templates/UnicodeIntervalTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/UnicodeCharactersMap/Templates/UnicodeIntervalTemplate.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.CodeLibraryMap.Templates.UnicodeIntervalTemplate"
+    x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.UnicodeCharactersMap.Templates.UnicodeIntervalTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
