--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/UnicodeCharactersMap/UnicodeCharactersMapSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/UnicodeCharactersMap/UnicodeCharactersMapSubPage.xaml
@@ -1,10 +1,9 @@
 ﻿<UserControl
-    x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.CodeLibraryMap.UnicodeCharactersMapSubPage"
+    x:Class="Brainf_ckSharp.Uwp.Controls.SubPages.Views.UnicodeCharactersMap.UnicodeCharactersMapSubPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:templates="using:Brainf_ckSharp.Uwp.Controls.SubPages.Views.CodeLibraryMap.Templates"
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     xmlns:models="using:Brainf_ckSharp.Uwp.Models"
@@ -13,6 +12,7 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:objectModel="using:Brainf_ckSharp.Uwp.Extensions.System.Collections.ObjectModel"
     xmlns:convertersSubPage="using:Brainf_ckSharp.Uwp.Converters.SubPages"
+    xmlns:templates1="using:Brainf_ckSharp.Uwp.Controls.SubPages.Views.UnicodeCharactersMap.Templates"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -72,7 +72,7 @@
 
                         <!--Group header template-->
                         <DataTemplate x:DataType="objectModel:IGroupedCollection">
-                            <templates:UnicodeIntervalTemplate
+                            <templates1:UnicodeIntervalTemplate
                                 Height="52"
                                 Value="{x:Bind Key.ToString()}"
                                 Description="{x:Bind convertersSubPage:UnicodeIntervalConverter.ConvertDescription((models:UnicodeInterval)Key)}"/>
@@ -84,7 +84,7 @@
 
                 <!--Character template-->
                 <DataTemplate x:DataType="models:UnicodeCharacter">
-                    <templates:UnicodeCharacterTemplate Character="{x:Bind}"/>
+                    <templates1:UnicodeCharacterTemplate Character="{x:Bind}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.ItemsPanel>
