--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeSessionView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeSessionView.xaml
@@ -12,6 +12,8 @@
     xmlns:jumpList="using:Brainf_ckSharp.Uwp.Controls.DataTemplates.JumpList"
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
     xmlns:views="using:Brainf_ckSharp.Uwp.Models.Ide.Views"
+    xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
+    xmlns:enums="using:Brainf_ckSharp.Uwp.Enums"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -66,7 +68,7 @@
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate x:DataType="objectModel:IGroupedCollection">
                                     <jumpList:SemanticZoomZoomedInViewHeaderTemplate
-                                        Title="{Binding Key}"
+                                        Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert(Key.(enums:IdeResultSection.Value))}"
                                         Margin="0,-8,0,0"/>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
