--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeSessionView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeSessionView.xaml
@@ -14,6 +14,7 @@
     xmlns:views="using:Brainf_ckSharp.Uwp.Models.Ide.Views"
     xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
     xmlns:enums="using:Brainf_ckSharp.Uwp.Enums"
+    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -36,6 +37,18 @@
                 FontSize="16"
                 Foreground="Cornsilk"
                 TextWrapping="Wrap"/>
+        </DataTemplate>
+
+        <!--Source code-->
+        <DataTemplate
+            x:Key="SourceCodeTemplate"
+            x:DataType="views:IdeResultWithSectionInfo">
+            <TextBlock
+                FontSize="16"
+                Foreground="Cornsilk"
+                TextWrapping="Wrap">
+                <Span attachedProperties:Brainf_ckInlineFormatterHelper.Source="{x:Bind Result.SourceCode}"/>
+            </TextBlock>
         </DataTemplate>
     </UserControl.Resources>
 
@@ -76,7 +89,8 @@
                     </ListView.GroupStyle>
                     <ListView.ItemTemplateSelector>
                         <templateSelectors:IdeResultSectionTemplateSelector
-                            StdoutTemplate="{StaticResource StdoutTemplate}"/>
+                            StdoutTemplate="{StaticResource StdoutTemplate}"
+                            SourceCodeTemplate="{StaticResource SourceCodeTemplate}"/>
                     </ListView.ItemTemplateSelector>
                 </ListView>
             </SemanticZoom.ZoomedInView>
