Added initial stack trace support

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -71,6 +71,7 @@
                     <ListView.ItemTemplateSelector>
                         <templateSelectors:IdeResultSectionTemplateSelector
                             StdoutTemplate="{StaticResource StdoutTemplate}"
+                            StackTraceTemplate="{StaticResource StackTraceTemplate}"
                             SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
                             MemoryStateTemplate="{StaticResource MemoryStateTemploate}"/>
                     </ListView.ItemTemplateSelector>
