Added exception type template

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -70,6 +70,7 @@
                     </ListView.GroupStyle>
                     <ListView.ItemTemplateSelector>
                         <templateSelectors:IdeResultSectionTemplateSelector
+                            ExceptionTypeTemplate="{StaticResource ExceptionTypeTemplate}"
                             StdoutTemplate="{StaticResource StdoutTemplate}"
                             StackTraceTemplate="{StaticResource StackTraceTemplate}"
                             SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
