--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPageTemplates.xaml
@@ -5,7 +5,8 @@
     xmlns:views="using:Brainf_ckSharp.Uwp.Models.Ide.Views"
     xmlns:models="using:Brainf_ckSharp.Models"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console">
+    xmlns:convertersConsole="using:Brainf_ckSharp.Uwp.Converters.Console"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
 
     <!--Exception type template-->
     <DataTemplate
@@ -49,6 +50,91 @@
             TextWrapping="Wrap">
             <Span attachedProperties:Brainf_ckInlineFormatterHelper.Source="{x:Bind Result.SourceCode}"/>
         </TextBlock>
+    </DataTemplate>
+
+    <!--Function definitions-->
+    <DataTemplate
+        x:Key="FunctionDefinitionsTemploate"
+        x:DataType="views:IdeResultWithSectionInfo">
+        <ListView
+            IsItemClickEnabled="False"
+            SelectionMode="None"
+            ItemsSource="{x:Bind Result.Functions}">
+            <ListView.Resources>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Margin" Value="4"/>
+                    <Setter Property="Padding" Value="0"/>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                </Style>
+            </ListView.Resources>
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:FunctionDefinition">
+                    <Grid RowSpacing="4">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <!--Outer border-->
+                        <Border
+                            BorderThickness="2"
+                            BorderBrush="#20FFFFFF"/>
+
+                        <!--Value and body-->
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="32"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!--Function value-->
+                            <Canvas Background="#20000000"/>
+                            <Viewbox 
+                                StretchDirection="DownOnly"
+                                Grid.Column="0"
+                                Margin="12,0,12,0">
+                                <TextBlock 
+                                    Text="{x:Bind Value.ToString()}"
+                                    FontSize="16"
+                                    Foreground="LightGray"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"/>
+                            </Viewbox>
+
+                            <!--Function body-->
+                            <Canvas
+                                Background="#06FFFFFF"
+                                Grid.Column="1"/>
+                            <TextBlock
+                                Grid.Column="1"
+                                FontSize="16"
+                                TextWrapping="Wrap"
+                                Padding="12,8,12,12">
+                                <Span attachedProperties:Brainf_ckInlineFormatterHelper.Source="{x:Bind Body}"/>
+                            </TextBlock>
+                        </Grid>
+
+                        <!--Index-->
+                        <TextBlock
+                            Grid.Row="1"
+                            Text="{x:Bind Index.ToString()}"
+                            HorizontalAlignment="Center"
+                            Foreground="#FFA0A0A0"/>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <controls:StaggeredPanel
+                        RowSpacing="0"
+                        ColumnSpacing="0"
+                        DesiredColumnWidth="220"/>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+        </ListView>
     </DataTemplate>
 
     <!--Stack trace-->
