Added error position template

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -71,6 +71,7 @@
                     <ListView.ItemTemplateSelector>
                         <templateSelectors:IdeResultSectionTemplateSelector
                             ExceptionTypeTemplate="{StaticResource ExceptionTypeTemplate}"
+                            ErrorLocationTemplate="{StaticResource ErrorPositionTemplate}"
                             StdoutTemplate="{StaticResource StdoutTemplate}"
                             StackTraceTemplate="{StaticResource StackTraceTemplate}"
                             SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
