Added statistics template

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -76,7 +76,8 @@
                             StackTraceTemplate="{StaticResource StackTraceTemplate}"
                             SourceCodeTemplate="{StaticResource SourceCodeTemplate}"
                             FunctionDefinitionsTemplate="{StaticResource FunctionDefinitionsTemploate}"
-                            MemoryStateTemplate="{StaticResource MemoryStateTemploate}"/>
+                            MemoryStateTemplate="{StaticResource MemoryStateTemploate}"
+                            StatisticsTemplate="{StaticResource StatisticsTemplate}"/>
                     </ListView.ItemTemplateSelector>
                 </ListView>
             </SemanticZoom.ZoomedInView>
