Fixed title of zoomed out sections in IDE result view

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/IdeResultSubPage/IdeResultSubPage.xaml
@@ -97,7 +97,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="ICollectionViewGroup">
                             <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
-                                Title="{Binding Group.Key}"
+                                Title="{x:Bind convertersSubPages:IdeResultSectionConverter.Convert((enums:IdeResultSection)Group.(objectModel:IGroupedCollection.Key))}"
                                 Description="{Binding Group.Key}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
